--- a/index.html
+++ b/index.html
@@ -601,29 +601,34 @@
 
         <form action="" class="form">
           <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
-          <label for="name" class="form-label"
+          <label class="form-label"
             >Имя
+            <input type="text" name="name" class="form-input" placeholder=" " />
             <svg class="form-icon" width="12" height="12">
               <use href="./images/sprite.svg#icon-human"></use>
             </svg>
           </label>
-          <input type="text" class="form-input" id="name" placeholder=" " />
 
-          <label for="tel" class="form-label"
+          <label class="form-label"
             >Телефон
+            <input type="tel" name="tel" class="form-input" placeholder=" " />
             <svg class="form-icon" width="12" height="12">
               <use href="./images/sprite.svg#icon-phone"></use>
             </svg>
           </label>
-          <input type="tel" class="form-input" id="tel" placeholder=" " />
 
-          <label for="fmail" class="form-label"
+          <label class="form-label"
             >Почта
+            <input
+              type="email"
+              name="email"
+              class="form-input"
+              placeholder=" "
+            />
             <svg class="form-icon" width="12" height="12">
               <use href="./images/sprite.svg#icon-fmail"></use>
             </svg>
           </label>
-          <input type="email" class="form-input" id="fmail" placeholder=" " />
 
           <label for="comment" class="form-label">Комментарий</label>
           <textarea
@@ -638,7 +643,7 @@
               type="checkbox"
               name="agreements"
               id="policy"
-              class="policy-input"
+              class="policy-input visually-hidden"
             />
             <label for="policy" class="policy-label"
               >Соглашаюсь с рассылкой и принимаю
