--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
               id="policy"
               class="policy-input visually-hidden"
             />
-            <label for="policy" class="policy-label"
-              >Соглашаюсь с рассылкой и принимаю
+            <label for="policy" class="policy-label">
+              Соглашаюсь с рассылкой и принимаю
               <a class="policy-link" href="#">Условия договора</a>
             </label>
           </div>
