--- a/index.html
+++ b/index.html
@@ -584,6 +584,9 @@
             </li>
           </ul>
         </div>
+
+        <!-- SUBSCRIBE PAGE -->
+        
         <div class="subscribe">
           <h3 class="social-title">Подпишитесь на рассылку</h3>
           <form class="subscribe-form">
