--- a/portfolio.html
+++ b/portfolio.html
@@ -324,6 +324,23 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <h3 class="social-title">Подпишитесь на рассылку</h3>
+          <form class="subscribe-form">
+            <input
+              type="email"
+              name="email"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="btn">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
