--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header class="page-header">
       <div class="container">
         <nav class="main-nav">
-          <a class="logo-header" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo-header" href="./index.html" lang="en"
+            ><span>Web</span>Studio</a
+          >
           <ul class="nav-list">
             <li class="nav-item">
               <a class="nav-link link-active" href="">Студия</a>
@@ -497,7 +499,9 @@
     <footer class="page-footer">
       <div class="container">
         <div class="footer-container">
-          <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo-footer" href="./index.html" lang="en"
+            ><span>Web</span>Studio</a
+          >
           <address class="contacts-footer" id="contacts">
             <ul class="contacts-footer-list">
               <li class="contacts-footer-item">
@@ -586,7 +590,7 @@
         </div>
 
         <!-- SUBSCRIBE PAGE -->
-        
+
         <div class="subscribe">
           <h3 class="social-title">Подпишитесь на рассылку</h3>
           <form class="subscribe-form">
