--- a/index.html
+++ b/index.html
@@ -130,32 +130,20 @@
           <h2 class="work-title title">Чем мы занимаемся</h2>
           <ul class="work-list">
             <li class="work-item">
-              <img
-                src="./images/img-1.jpg"
-                alt="Десктопные приложения"
-                width="370"
-              />
+              <img src="./images/img-1.jpg" alt="Десктопные приложения" />
               <div class="work-desc">
                 <p class="work-desc-text">Десктопные приложения</p>
               </div>
             </li>
 
             <li class="work-item">
-              <img
-                src="./images/img-2.jpg"
-                alt="Мобильные приложения"
-                width="370"
-              />
+              <img src="./images/img-2.jpg" alt="Мобильные приложения" />
               <div class="work-desc">
                 <p class="work-desc-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img-3.jpg"
-                alt="Дизайнерские решения"
-                width="370"
-              />
+              <img src="./images/img-3.jpg" alt="Дизайнерские решения" />
               <div class="work-desc">
                 <p class="work-desc-text">Дизайнерские решения</p>
               </div>
