--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <ul class="gallery-list">
           <li class="gallery-item">
             <div class="thumb">
-              <img src="./images/proj-1.jpg" alt="Технокряк" width="370" />
+              <img src="./images/proj-1.jpg" alt="Технокряк" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -95,7 +95,6 @@
               <img
                 src="./images/proj-2.jpg"
                 alt="Постер New Orlean vs Golden Star"
-                width="370"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -112,11 +111,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img
-                src="./images/proj-3.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-              />
+              <img src="./images/proj-3.jpg" alt="Ресторан Seafood" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -132,7 +127,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img src="./images/proj-4.jpg" alt="Проект Prime" width="370" />
+              <img src="./images/proj-4.jpg" alt="Проект Prime" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -148,7 +143,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img src="./images/proj-5.jpg" alt="Проект Boxes" width="370" />
+              <img src="./images/proj-5.jpg" alt="Проект Boxes" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -164,11 +159,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img
-                src="./images/proj-6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-              />
+              <img src="./images/proj-6.jpg" alt="Inspiration has no Borders" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -184,11 +175,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img
-                src="./images/proj-7.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-              />
+              <img src="./images/proj-7.jpg" alt="Издание Limited Edition" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -204,7 +191,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img src="./images/proj-8.jpg" alt="Проект LAB" width="370" />
+              <img src="./images/proj-8.jpg" alt="Проект LAB" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
@@ -220,11 +207,7 @@
           </li>
           <li class="gallery-item">
             <div class="thumb">
-              <img
-                src="./images/proj-9.jpg"
-                alt="Growing Business"
-                width="370"
-              />
+              <img src="./images/proj-9.jpg" alt="Growing Business" />
               <div class="overlay">
                 <p class="overlay-text">
                   Технокряк это современная площадка распространения
