--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
         <!-- Form for modal -->
 
-        <form action="" class="form">
+        <form class="form">
           <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
           <label class="form-label"
             >Имя
